Fix/updater strengthen validation (#456)
* added fingerprint validation - now, should be almost impossible to clone the cert

* fixed execution order for lib package clearance

* manual check for update with notification in case nothing found

* refactored desktop messaging

* translations

* make husky work again

* fixed failing tests

* fixed NOENT error for release build

* increased node mem allocation

* increased node mem allocation

* adjusted desktop tagging

* still more mem

* changed platform label, and added more translations

* minor refactoring, undoing dev data

* more consistent code style... should introduce a linter

* mo mem?! wtf?

* check mem to analyse mem probs on ci

* linting ...

* adjust top command to work on osx

* nano refinement - ty @blankey1337

* checking build stage

* oops. reordered builds.

* shit, I need linter file here!

* try a new thing

* using env vars for configure node mem

* returning parallel jobs

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -56,7 +56,7 @@
   "application": "Приложение",
   "arbitrary_message": "Произволно съобщение",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Заявка за продажба",
+  "ask_order": "Попитай реда",
   "ask_order_cancellation": "Отмяна заявка за продажба",
   "ask_order_id": "Заявка за продажба ID",
   "ask_order_placement": "Позициониране заявка за продажба",
@@ -135,11 +135,14 @@
   "clear_results": "Изчисти резултатите",
   "clear_search_results": "Изчисти резултата от търсенето",
   "click_for_changes": "Кликнете тук, за да видите какво се е променило",
+  "click_for_other_platforms": "Щракнете тук, ако искате друга платформа",
   "click_here_for_help": "Кликнете тук, за да научите повече за него",
   "click_here_to_enable": "Натиснете тук за разрешаване.",
+  "click_to_apply": "Кликнете, за да приложите",
   "click_to_claim": "Кликнете тук, за да поискате безплатния Burst.",
+  "click_to_refresh": "Кликнете, за да обновите",
   "close": "Затвори",
-  "comment": "Коментар",
+  "comment": "коментар",
   "complete": "Завърши",
   "confirm_contact_delete": "Да, изтрий контакта",
   "confirm_forging_start": "Потвърдете старт на коването",
@@ -846,6 +849,7 @@
   "success_update_contact": "Контактът е актуализиран успешно!",
   "success_valid_token": "Маркерът е валиден и принадлежи към сметка __account_link__. Бил е генериран на __timestamp__.",
   "suggested_fee": "Предложени такси",
+  "suggested_fee_help": "Евтина такса: 50% шанс за транзакция ще го направи в един от следващите десет блока. в следващия блок и 99% в следващите два блока.",
   "tags": "Етикети",
   "tags_categories": "Етикети (категории)",
   "tentative": "Ориентировъчен",
@@ -894,6 +898,7 @@
   "update_beta_available": "Нова експериментална версия е достъпна. Не се препоръчва да я инсталирате, освен ако не знаете какво правите.",
   "update_blockchain_downloading": "Блокверигата все още се изтегля, проверете отново след като се актуализира.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Проверка на актуализацията",
   "update_contact": "Актуализиране на контакт",
   "update_multiple_available": "Обща и тестова версия са налични. Не се препоръчва да инсталирате тестова версия, ако не знаете какво правите.",
   "update_testnet": "BRS не може да се актуализира, докато е свързан към testnet.",
