--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -56,7 +56,7 @@
   "application": "Aplikace",
   "arbitrary_message": "Libovolná zpráva",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Poptat objendávku",
+  "ask_order": "Požádat o objednávku",
   "ask_order_cancellation": "Požádat o zrušení objednávky",
   "ask_order_id": "Dotaz na ID objednávky",
   "ask_order_placement": "Zadat objednávku",
@@ -135,9 +135,12 @@
   "clear_results": "Smazat výsledky",
   "clear_search_results": "Vymazat Výsledky Hledání",
   "click_for_changes": "Klikněte sem a uvidíte, co se změnilo",
+  "click_for_other_platforms": "Pokud chcete jinou platformu, klikněte zde",
   "click_here_for_help": "Chcete-li se o tom dozvědět více, klikněte zde",
   "click_here_to_enable": "Klikněte na tlačítko povolit obsah.",
+  "click_to_apply": "Klikněte pro použití",
   "click_to_claim": "Klikněte zde pro uplatnění nároku zdarma.",
+  "click_to_refresh": "Klepnutím obnovíte",
   "close": "Zavřít",
   "comment": "Komentář",
   "complete": "Hotovo",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kontakt byl úspěšně upraven!",
   "success_valid_token": "Token je platný a patří k účtu __account_link__. Byl vytvořen v __timestamp__.",
   "suggested_fee": "Doporučené poplatky",
+  "suggested_fee_help": "Levný poplatek: 50% náhoda transakce bude dělat to v jednom z příštích deseti bloků. <br /> Standardní poplatek: 50% šance transakce bude dělat to v dalším bloku. <br /> Prioritní poplatek: 90% šance transakce bude dělat v dalším bloku a 99% pro další dva bloky.",
   "tags": "Štítky",
   "tags_categories": "Štítky (kategorie)",
   "tentative": "Nezávazně",
@@ -894,6 +898,7 @@
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "Blockchain se stále stahuje. Zkontrolujte jej prosím znovu, až bude aktuální.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Kontrola aktualizace",
   "update_contact": "Aktualizovat kontakt",
   "update_multiple_available": "K dispozici je jak hlavní tak experimentální verze. Není doporučeno instalovat experimentální verzi, pokud nevíte, co děláte.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
