--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -135,6 +135,7 @@
   "clear_results": "Clear Results",
   "clear_search_results": "Clear Search Results",
   "click_for_changes": "Click here to see what has changed",
+  "click_for_other_platforms": "Click here, if you want another platform",
   "click_here_for_help": "Click here to know more about it",
   "click_here_to_enable": "Click here to enable it.",
   "click_to_apply": "Click to apply",
@@ -907,6 +908,7 @@
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Update Check",
   "update_contact": "Update Contact",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
