--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -56,7 +56,7 @@
   "application": "Sovellus",
   "arbitrary_message": "Mielivaltainen viesti",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Myyntitoimeksianto",
+  "ask_order": "Kysy tilauksesta",
   "ask_order_cancellation": "Myyntitoimeksiannon peruutus",
   "ask_order_id": "Myyntitoimeksiannon ID",
   "ask_order_placement": "Myyntitoimeksiannon syöttö",
@@ -135,9 +135,12 @@
   "clear_results": "Tyhjennä  tulokset",
   "clear_search_results": "Tyhjennä hakutulokset",
   "click_for_changes": "Klikkaa tästä nähdäksesi, mikä on muuttunut",
+  "click_for_other_platforms": "Klikkaa tästä, jos haluat toisen alustan",
   "click_here_for_help": "Saat lisätietoja siitä napsauttamalla tätä",
   "click_here_to_enable": "Klikkaa tästä ottaaksesi sen käyttöön.",
+  "click_to_apply": "Napsauta sovellusta",
   "click_to_claim": "Klikkaa tästä väittääksesi vapaan purskeen.",
+  "click_to_refresh": "Päivitä napsauttamalla",
   "close": "Sulje",
   "comment": "Kommentti",
   "complete": "Valmis",
@@ -846,6 +849,7 @@
   "success_update_contact": "Yhteystieto päivitetty.",
   "success_valid_token": "Tunnus on kelvollinen ja kuuluu tilin __account_link__. Se luotiin __timestamp__.",
   "suggested_fee": "Ehdotetut maksut",
+  "suggested_fee_help": "Halvat maksut: 50%: n todennäköisyystapahtuma tekee siitä yhdellä seuraavista kymmenestä lohkosta. <br /> Perusmaksu: 50%: n todennäköisyystapahtuma tekee sen seuraavassa lohkossa. <br /> Ensisijainen maksu: 90%: n todennäköisyystapahtuma tekee se seuraavassa lohkossa ja 99% seuraavien kahden lohkon sisällä.",
   "tags": "Tagit",
   "tags_categories": "Tagit (kategoriat)",
   "tentative": "Alustava",
@@ -894,6 +898,7 @@
   "update_beta_available": "Uusi kokeellinen versio on saatavilla. Sen käyttöä ei suositella, ellet tiedä mitä olet tekemässä.",
   "update_blockchain_downloading": "Lohkoketjua ladataan edelleen, tarkista uudelleen kun se on ajan tasalla.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Päivitystarkistus",
   "update_contact": "Päivitä yhteystieto",
   "update_multiple_available": "Sekä yleinen julkaisu- että testiversio on saatavilla. Testiversion käyttö on suositeltavaa vain jos todella tiedät mitä teet.",
   "update_testnet": "BRS:ää ei voi päivittää kun ollaan yhdistetty testiverkkoon.",
