--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -56,7 +56,7 @@
   "application": "Aplikasi",
   "arbitrary_message": "Semaunya pesan",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Meminta Order",
+  "ask_order": "Tanyakan Order",
   "ask_order_cancellation": "Meminta pembatalan pesanan",
   "ask_order_id": "Menanyakan ID pesanan",
   "ask_order_placement": "Penempatan Order",
@@ -135,9 +135,12 @@
   "clear_results": "Hapus hasil",
   "clear_search_results": "Menghapus Hasil Pencarian",
   "click_for_changes": "Klik di sini untuk melihat apa yang telah berubah",
+  "click_for_other_platforms": "Klik di sini, jika Anda menginginkan platform lain",
   "click_here_for_help": "Klik di sini untuk mengetahui lebih banyak tentang itu",
   "click_here_to_enable": "Klik di sini untuk mengaktifkannya.",
+  "click_to_apply": "Klik untuk mendaftar",
   "click_to_claim": "Klik di sini untuk mengklaim Burst gratis Anda.",
+  "click_to_refresh": "Klik untuk menyegarkan",
   "close": "Tutup",
   "comment": "Komentar",
   "complete": "Menyelesaikan",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kontak telah berhasil diperbaharui!",
   "success_valid_token": "Token sah dan milik __account_link__ akun. Dibuat pada __timestamp__.",
   "suggested_fee": "Biaya yang disarankan",
+  "suggested_fee_help": "Biaya murah: 50% peluang transaksi akan masuk dalam salah satu dari sepuluh blok berikutnya. <br /> Biaya standar: 50% peluang transaksi akan berhasil di blok berikutnya. <br /> Biaya prioritas: 90% peluang transaksi akan terjadi di blok berikutnya dan 99% untuk membuat dalam dua blok berikutnya.",
   "tags": "Tag",
   "tags_categories": "Tag (kategori)",
   "tentative": "Tentatif",
@@ -894,6 +898,7 @@
   "update_beta_available": "Percobaan rilis baru tersedia. Hal ini tidak dianjurkan bahwa Anda menginstal ini kecuali Anda adalah seorang ahli.",
   "update_blockchain_downloading": "Blockchain masih mengunduh, periksa kembali setelah selesai.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Perbarui Periksa",
   "update_contact": "Memperbarui Kontak",
   "update_multiple_available": "Seorang jenderal dan versi percobaan tersedia. Hal ini tidak dianjurkan bahwa Anda menginstal versi percobaan kecuali Anda adalah seorang ahli.",
   "update_testnet": "BRS tidak dapat diperbarui sementara terhubung ke testnet.",
