--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -56,7 +56,7 @@
   "application": "Aplikacija",
   "arbitrary_message": "Žinutė",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Pardavimo užsakymas",
+  "ask_order": "Paklauskite Užsakymo",
   "ask_order_cancellation": "Pardavimo užsakymo panaikinimas",
   "ask_order_id": "Pardavimo kainos užsakymo ID",
   "ask_order_placement": "Pardavimo užsakymo padavimas",
@@ -135,11 +135,14 @@
   "clear_results": "Išvalyti rezultatus",
   "clear_search_results": "Išvalyti paieškos rezultatus",
   "click_for_changes": "Spauskite čia norėdami pamatyti, kas pasikeitė",
+  "click_for_other_platforms": "Jei norite kitos platformos, spustelėkite čia",
   "click_here_for_help": "Spauskite čia norėdami sužinoti daugiau apie tai",
   "click_here_to_enable": "Spauskite čia tam, kad įgalinti.",
+  "click_to_apply": "Spustelėkite, jei norite taikyti",
   "click_to_claim": "Spauskite čia norėdami pareikšti savo nemokamą sprogimą.",
+  "click_to_refresh": "Spustelėkite, jei norite atnaujinti",
   "close": "Uždaryti",
-  "comment": "Komentaras",
+  "comment": "Komentuoti",
   "complete": "Pabaigta",
   "confirm_contact_delete": "Taip, panaikinti kontaktą",
   "confirm_forging_start": "Patvirtinti \"kalimo\" pradžią",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kontaktas atnaujintas sėkmingai!",
   "success_valid_token": "Atpažinimo ženklas galioja ir priklauso __account_link__. Jis buvo sukurtas __timestamp__.",
   "suggested_fee": "Siūlomi mokesčiai",
+  "suggested_fee_help": "Pigus mokestis: 50% atsitiktinumo sandoris jį pavers vienu iš dešimties blokų. <br /> Standartinis mokestis: 50% tikimybės sandoris jį pavers į kitą bloką. <br /> Prioritetas: 90% tikimybė kitame bloke ir 99% per kitus du blokus.",
   "tags": "Žymos",
   "tags_categories": "Žymos (kategorijos)",
   "tentative": "Bandomasis",
@@ -894,6 +898,7 @@
   "update_beta_available": "Yra nauja eksperimentinė versija. Tai nėra rekomenduojama įdiegti, jei žinote, ką darote.",
   "update_blockchain_downloading": "Blokai vis dar siunčiasi, patikrinkite dar kartą po to, kai jie atsinaujins.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Atnaujinimo patikrinimas",
   "update_contact": "Atnaujinti kontaktą",
   "update_multiple_available": "Yra tiek ir pagrindinė, tiek ir eksperimentinė versijos. Nerekomenduojame įdiegti eksperimentinės versijos, nebent jei žinote, ką darote.",
   "update_testnet": "BRS negalima atnaujinti, kol esate prisijungę prie testinio tinklo.",
