--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -56,7 +56,7 @@
   "application": "Applicatie",
   "arbitrary_message": "Willekeurig Bericht",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Vraag bestelling",
+  "ask_order": "Vraag om bestelling",
   "ask_order_cancellation": "Ask bestelling annulering",
   "ask_order_id": "Ask Order ID",
   "ask_order_placement": "Vraag order plaatsen",
@@ -135,11 +135,14 @@
   "clear_results": "Resultaten wissen",
   "clear_search_results": "Zoekresultaten wissen",
   "click_for_changes": "Klik hier om te zien wat er is veranderd",
+  "click_for_other_platforms": "Klik hier als u een ander platform wilt",
   "click_here_for_help": "Klik hier om er meer over te weten",
   "click_here_to_enable": "Klik hier om het in te schakelen.",
+  "click_to_apply": "Klik om te solliciteren",
   "click_to_claim": "Klik hier om uw gratis Burst te claimen.",
+  "click_to_refresh": "Klik om te vernieuwen",
   "close": "Sluiten",
-  "comment": "Opmerking",
+  "comment": "Commentaar",
   "complete": "Compleet",
   "confirm_contact_delete": "Ja, verwijder Contact",
   "confirm_forging_start": "bevestig het starten van het genereren",
@@ -846,6 +849,7 @@
   "success_update_contact": "De contactpersoon is bijgewerkt!",
   "success_valid_token": "Het token is geldig en behoort tot de account __account_link__. Het werd geproduceerd op __timestamp__.",
   "suggested_fee": "Voorgestelde kosten",
+  "suggested_fee_help": "Goedkoop tarief: 50% kanstransactie maakt het in een van de volgende tien blokken. <br /> Standaardtarief: 50% kanstransactie maakt het in het volgende blok. <br /> Prioriteitsprijs: 90% kanstransactie maakt het in het volgende blok en 99% om binnen de volgende twee blokken te maken.",
   "tags": "Tags",
   "tags_categories": "Tags (categorieën)",
   "tentative": "Voorlopig",
@@ -894,6 +898,7 @@
   "update_beta_available": "Een nieuwe experimentele versie is nu beschikbaar.  Het is niet aanbevolen dat u dit gaat installeren, tenzij u weet precies wat u doet.",
   "update_blockchain_downloading": "De blockchain is nog steeds het downloaden, controleer opnieuw nadat het up-to-date is.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Update Check",
   "update_contact": "Contactpersoon Bijwerken",
   "update_multiple_available": "Zowel een algemene en experimentele release zijn beschikbaar. Het is niet aanbevolen dat u de experimentele gebruikt als u niet weet wat u doet.",
   "update_testnet": "BRS kan niet worden geupdate terwijl het verbonden is met de testnet.",
