--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -56,7 +56,7 @@
   "application": "Aplikacja",
   "arbitrary_message": "Arbitralna wiadomość",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Zlecenie sprzedaży",
+  "ask_order": "Zapytaj o zamówienie",
   "ask_order_cancellation": "Anuluj zlecenie sprzedaży",
   "ask_order_id": "ID zlecenia sprzedaży",
   "ask_order_placement": "Wystaw zlecenie sprzedaży",
@@ -135,9 +135,12 @@
   "clear_results": "Wyczyść wyniki",
   "clear_search_results": "Wyczyść wyniki wyszukiwania",
   "click_for_changes": "Kliknij tutaj, aby zobaczyć, co się zmieniło",
+  "click_for_other_platforms": "Kliknij tutaj, jeśli chcesz inną platformę",
   "click_here_for_help": "Kliknij tutaj, aby dowiedzieć się więcej na ten temat",
   "click_here_to_enable": "Kliknij tutaj, aby włączyć.",
+  "click_to_apply": "Kliknij, aby zastosować",
   "click_to_claim": "Kliknij tutaj, aby odebrać darmowy Burst.",
+  "click_to_refresh": "Kliknij, aby odświeżyć",
   "close": "Zamknij",
   "comment": "Komentarz",
   "complete": "Zakończono",
@@ -856,6 +859,7 @@
   "success_update_contact": "Kontak został uaktualniony!",
   "success_valid_token": "Token jest ważny i należy do konta __account_link__. Został wygenerowany __timestamp__.",
   "suggested_fee": "Sugerowane opłaty",
+  "suggested_fee_help": "Tania opłata: 50% szansa na transakcję trafi do jednego z kolejnych dziesięciu bloków. <br /> Opłata standardowa: transakcja 50% szansy trafi do następnego bloku. <br /> Opłata priorytetowa: transakcja 90% szansy w następnym bloku i 99%, aby wykonać w ciągu dwóch kolejnych bloków.",
   "tags": "Tagi",
   "tags_categories": "Tagi (kategorie)",
   "tentative": "Orientacyjny",
@@ -904,6 +908,7 @@
   "update_beta_available": "Dostępna jest nowa eksperymentalna wersja oprogramowania. Nie rekomendowana jest instalacja chyba że wiesz co robisz.",
   "update_blockchain_downloading": "Blockchain jest jeszcze pobierane, sprawdź później gdy pobieranie się zakończy.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Aktualizuj czek",
   "update_contact": "Uaktualnij kontakt",
   "update_multiple_available": "Dostępne są nowe wersje oprogramowania, eksperymentalna i normalna. Nie rekomendowana jest instalacja wersji eksperymentalnej chyba że wiesz co robisz.",
   "update_testnet": "BRS nie może być uaktualniony w trakcie podłączenia do TestNetu.",
