--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -56,7 +56,7 @@
   "application": "Aplikácia",
   "arbitrary_message": "Ľubovoľná správa",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Predajný príkaz",
+  "ask_order": "Požiadať o objednávku",
   "ask_order_cancellation": "Zrušenie predajného príkazu",
   "ask_order_id": "ID predajného príkazu",
   "ask_order_placement": "Zadanie predajného príkazu",
@@ -135,11 +135,14 @@
   "clear_results": "Vymazať výsledky",
   "clear_search_results": "Vymazať výsledky vyhľadávania",
   "click_for_changes": "Kliknite sem a zistite, čo sa zmenilo",
+  "click_for_other_platforms": "Kliknite sem, ak chcete inú platformu",
   "click_here_for_help": "Kliknite tu a dozviete sa viac o ňom",
   "click_here_to_enable": "Kliknite sem pre aktiváciu.",
+  "click_to_apply": "Kliknutím aplikujete",
   "click_to_claim": "Kliknite tu, aby ste si uplatnili nárok na bezplatný burst.",
+  "click_to_refresh": "Kliknutím obnovíte",
   "close": "Zavrieť",
-  "comment": "Komentár",
+  "comment": "komentár",
   "complete": "Hotovo",
   "confirm_contact_delete": "Áno, odstrániť kontakt",
   "confirm_forging_start": "Potvrdiť spustenie kovania",
@@ -846,6 +849,7 @@
   "success_update_contact": "Kontakt bol úspešne upravený!",
   "success_valid_token": "Token je platný a patrí k účtu __account_link__. Bol vytvorený __timestamp__.",
   "suggested_fee": "Navrhované poplatky",
+  "suggested_fee_help": "Lacný poplatok: 50% šanca na transakciu bude v jednom z nasledujúcich desiatich blokov. <br /> Štandardný poplatok: 50% šanca na transakciu bude v nasledujúcom bloku. <br /> Prioritný poplatok: 90% šanca na transakciu v nasledujúcom bloku a 99% v nasledujúcich dvoch blokoch.",
   "tags": "Značky",
   "tags_categories": "Značky (kategórie)",
   "tentative": "Nezáväzne",
@@ -894,6 +898,7 @@
   "update_beta_available": "Nová experimentálna verzia je k dispozícii. Neodporúča sa aby ste si to nainštalovali, pokiaľ neviete, čo robíte.",
   "update_blockchain_downloading": "Blockchain sa stále sťahuje, skontrolujte znova keď už bude aktuálny.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Aktualizovať kontrolu",
   "update_contact": "Aktualizovať kontakt",
   "update_multiple_available": "K dispozícii sú hlavná aj experimentálna verzia. Neodporúča sa inštalovať experimentálnu verziu, ak neviete, čo robíte.",
   "update_testnet": "BRS sa nedá aktualizovať, ak je zároveň pripojený na testnet.",
