--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -56,7 +56,7 @@
   "application": "Додаток",
   "arbitrary_message": "Довільні повідомлення",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Заявка на Продаж",
+  "ask_order": "Запитайте замовлення",
   "ask_order_cancellation": "Відмінити ордер на купівлю",
   "ask_order_id": "ID ордера на купівлю",
   "ask_order_placement": "Розміщення ордера на купівлю",
@@ -135,9 +135,12 @@
   "clear_results": "Очистити результати",
   "clear_search_results": "Очистка результатів пошуку",
   "click_for_changes": "Натисніть тут, щоб побачити, що змінилося",
+  "click_for_other_platforms": "Натисніть тут, якщо хочете іншу платформу",
   "click_here_for_help": "Натисніть тут, щоб дізнатися більше про це",
   "click_here_to_enable": "Натисніть тут, щоб ввімкнути.",
+  "click_to_apply": "Натисніть, щоб застосувати",
   "click_to_claim": "Натисніть тут, щоб одержати безкоштовний Burst.",
+  "click_to_refresh": "Натисніть, щоб оновити",
   "close": "Закрити",
   "comment": "Коментар",
   "complete": "Завершено",
@@ -208,7 +211,7 @@
   "do_not_delete": "Ні, не видаляти",
   "domain": "Домен",
   "download": "Завантажити",
-  "download_started": "",
+  "download_started": "Завантаження розпочато",
   "downloaded": "Завантажено",
   "downloaded_hash": "Звантаженій хеш",
   "downloaded_volume": "Завантажений Об'єм",
@@ -846,6 +849,7 @@
   "success_update_contact": "Контакт був оновлений успішно!",
   "success_valid_token": "Токен дійсний і належить обліковому запису __account_link__. Він був створений  __timestamp__.",
   "suggested_fee": "Рекомендовані збори",
+  "suggested_fee_help": "Недорога плата: 50% випадкова транзакція зробить це в одному з наступних десяти блоків. <br /> Стандартний внесок: 50% шанс угоди буде здійснено в наступному блоці. це в наступному блоці і 99% зробити в межах наступних двох блоків.",
   "tags": "Мітки",
   "tags_categories": "Мітки (категорій)",
   "tentative": "Пробний",
@@ -894,6 +898,7 @@
   "update_beta_available": "Новий експериментальний випуск доступний. Не рекомендується, встановлювати його, якщо ви не знаєте, що ви робите.",
   "update_blockchain_downloading": "Blockchain ще завантажується, перевірте ще раз після того, як він оновиться.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Перевірка оновлення",
   "update_contact": "Оновлення контакту",
   "update_multiple_available": "Доступні як основний, так і експериментальний випуски. Не рекомендується встановлювати експериментальний випуск, якщо ви не знаєте, що ви робите.",
   "update_testnet": "BRS не можна оновити при підключенні до тестової мережі.",
