--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -56,7 +56,7 @@
   "application": "應用程序",
   "arbitrary_message": "任意信息",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "賣單",
+  "ask_order": "询问订单",
   "ask_order_cancellation": "買單取消",
   "ask_order_id": "賣單 ID",
   "ask_order_placement": "賣單委托",
@@ -135,11 +135,14 @@
   "clear_results": "清除結果",
   "clear_search_results": "清除搜尋結果",
   "click_for_changes": "点击此处查看更改内容",
+  "click_for_other_platforms": "如果您想要其他平台，请单击此处",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "點擊此處啟用它。",
+  "click_to_apply": "点击申请",
   "click_to_claim": "点击此处声明您的免费Burst。",
+  "click_to_refresh": "点击刷新",
   "close": "關閉​​​",
-  "comment": "評論",
+  "comment": "评论",
   "complete": "完成",
   "confirm_contact_delete": "是的 , 刪除聯絡人",
   "confirm_forging_start": "確認開始鍛造",
@@ -208,7 +211,7 @@
   "do_not_delete": "不，不要刪除",
   "domain": "域",
   "download": "下载",
-  "download_started": "",
+  "download_started": "下载开始了",
   "downloaded": "已下載",
   "downloaded_hash": "已下載的哈希",
   "downloaded_volume": "下載量",
@@ -846,6 +849,7 @@
   "success_update_contact": "聯絡人已更新成功 ！",
   "success_valid_token": "令牌是有效的，屬於帳戶__account_link__。它產生於 __timestamp__ 。",
   "suggested_fee": "建议的费用",
+  "suggested_fee_help": "便宜的费用：50％的交易将在下一个十个区块之一进行交易。<br />标准费用：50％的交易将在下一个区块进行交易。<br />优先费：90％的交易机会将使它在下一个区块中，99％在接下来的两个区块内完成。",
   "tags": "標簽",
   "tags_categories": "標簽（類別）",
   "tentative": "暫定",
@@ -894,6 +898,7 @@
   "update_beta_available": "一個新的測試版本可用。推薦您不要安裝，除非您知道您在做什麽。",
   "update_blockchain_downloading": "Blockchain仍在下載，請更新之後再檢查。",
   "update_burst_account": "Update your burst account",
+  "update_check": "更新检查",
   "update_contact": "更新聯絡人",
   "update_multiple_available": "通用版本和測試版本均可用。建議您不要安裝測試版本，除非您知道在做什麽。",
   "update_testnet": "當連接到測試網絡時,不能更新 BRS 。",
