--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -56,7 +56,7 @@
   "application": "Applicazione",
   "arbitrary_message": "Messaggio arbitrario",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "Ordine di vendita",
+  "ask_order": "Chiedi ordine",
   "ask_order_cancellation": "Cancellazione ordine di vendita",
   "ask_order_id": "ID ordine di vendita",
   "ask_order_placement": "Collocamento ordine di vendita",
@@ -135,9 +135,12 @@
   "clear_results": "Clear Results",
   "clear_search_results": "Rimuovi risultati di ricerca",
   "click_for_changes": "Clicca qui per vedere cosa è cambiato",
+  "click_for_other_platforms": "Clicca qui, se vuoi un'altra piattaforma",
   "click_here_for_help": "Clicca qui per saperne di più",
   "click_here_to_enable": "Clicca qui per attivarlo.",
+  "click_to_apply": "Clicca per applicare",
   "click_to_claim": "Clicca qui per richiedere il tuo Burst gratuito.",
+  "click_to_refresh": "Clicca per aggiornare",
   "close": "Chiudi",
   "comment": "Commento",
   "complete": "Completo",
@@ -846,6 +849,7 @@
   "success_update_contact": "Il contatto è stato aggiornato con successo!",
   "success_valid_token": "Il token è valido e appartiene al conto __account_link__. È stato generato il __timestamp__.",
   "suggested_fee": "Tasse suggerite",
+  "suggested_fee_help": "Tariffa economica: la transazione del 50% di probabilità lo farà in uno dei prossimi dieci blocchi. <br /> Tariffa standard: la transazione del 50% di probabilità lo farà nel blocco successivo. <br /> Commissione di priorità: il 90% della transazione casuale farà nel prossimo blocco e il 99% da fare entro i prossimi due blocchi.",
   "tags": "Tag",
   "tags_categories": "Tags (categorie)",
   "tentative": "Tentativo",
@@ -894,6 +898,7 @@
   "update_beta_available": "È disponibile una nuova versione sperimentale. Non è consigliabile installarla se non sai cosa stai facendo.",
   "update_blockchain_downloading": "Il blockchain sta ancora scaricando, controllare nuovamente appena sarà aggiornato.",
   "update_burst_account": "Update your burst account",
+  "update_check": "Controllo dell'aggiornamento",
   "update_contact": "Aggiorna contatto",
   "update_multiple_available": "Sia un rilascio generale che uno sperimentale sono disponibili. Non è consigliabile installare il rilascio sperimentale se non si è certi di cosa si stia facendo.",
   "update_testnet": "L'BRS non può essere aggiornato quando è collegato alla testnet.",
