--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -56,7 +56,7 @@
   "application": "アプリケーション",
   "arbitrary_message": "任意のメッセージ",
   "are_you_sure": "Do you you really want to send Burst to them?",
-  "ask_order": "注文を尋ねる",
+  "ask_order": "注文を依頼する",
   "ask_order_cancellation": "注文のキャンセルを依頼",
   "ask_order_id": "注文IDを尋ねる",
   "ask_order_placement": "発注を依頼",
@@ -135,9 +135,12 @@
   "clear_results": "結果をクリア",
   "clear_search_results": "検索結果をクリア",
   "click_for_changes": "変更点を確認するには、ここをクリックしてください。",
+  "click_for_other_platforms": "他のプラットフォームが必要な場合は、ここをクリックしてください。",
   "click_here_for_help": "それについての詳細を知るためにここをクリックしてください",
   "click_here_to_enable": "有効にするには、ここをクリックしてください。",
+  "click_to_apply": "クリックして適用",
   "click_to_claim": "あなたの無料バーストを請求するにはここをクリックしてください。",
+  "click_to_refresh": "クリックして更新",
   "close": "閉じる",
   "comment": "コメント",
   "complete": "完了",
@@ -846,6 +849,7 @@
   "success_update_contact": "連絡先が更新されました ！",
   "success_valid_token": "このトークンは有効で、アカウント__account_link__ のものです。それは__timestamp__ に生成されました。",
   "suggested_fee": "提案された料金",
+  "suggested_fee_help": "安い料金：50％のチャンスの取引は次の10ブロックのうちの1つになります。<br />標準料金：50％のチャンスの取引は次のブロックにそれをします。<br />優先料金：90％の可能性があるトランザクション次の2つのブロックの中で作るためにそれは次のブロックと99％にあります。",
   "tags": "タグ",
   "tags_categories": "タグ（カテゴリ）",
   "tentative": "仮決め",
@@ -894,6 +898,7 @@
   "update_beta_available": "新しい試験的リリースが利用可能です。ただあなたが自身が何をやっているか理解していない限り、試験的リリースのインストールは推奨しません。",
   "update_blockchain_downloading": "ブロックチェーンはまだダウンロード中です。最新になってから再度チェックしてください。",
   "update_burst_account": "Update your burst account",
+  "update_check": "更新チェック",
   "update_contact": "連絡先を更新",
   "update_multiple_available": "実際のリリースと試験的リリースの両方が可能です。ただあなたが自身が何をやっているか理解していない限り、試験的リリースのインストールは推奨しません。",
   "update_testnet": "テストネットに接続中はBRSを更新できません。",
